# rulebook

./: .coverage  .cppcheck_suppressions  .editorconfig  .gitignore  .pylintrc  .shellcheckrc  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  activate_python.sh  addon.json  build.gradle.kts  deploy_website.sh  developing.md  eslint.config.js  exception-ambiguity.html  function-specify-return-type.html  gradle.properties  index.html  justfile  package-lock.json  package.json  paragraph-continuation-first-word.html  pnpm-lock.yaml  pnpm-workspace.yaml  pylintrc  pyproject.toml  renovate.json  renovate.jsonc  requirements-dev.txt  requirements-website.txt  requirements.txt  rulebook_checks.xml  rulebook_checkstyle.xml  rulebook_codenarc.xml  rulebook_rules.xml  rules.html  rules.md  settings.gradle.kts  (+10 more)
rulebook-cli/: CMakeLists.txt  package.json
rulebook-cli/resources/: checkstyle_google.xml  checkstyle_sun.xml  codenarc.xml  cppcheck_core.json  cppcheck_google.json  cppcheck_qt.json  eslint_crockford.config.js  eslint_google.config.js  eslint_proxmox.config.js  ktlint.editorconfig  pylint_google  pylint_pylint  typescript_eslint_crockford.config.js  typescript_eslint_google.config.js
rulebook-cli/src/: cli.cpp  cli.h  cli.hpp  color.h  colors.h  colors.hpp  config_initializer.cpp  config_initializer.h  config_initializer.hpp  config_writer.cpp  config_writer.h  extraction.cpp  extraction.h  extraction.hpp  file_printer.cpp  file_printer.h  file_printer.hpp  files.cpp  interactive_config.cpp  interactive_config.h  linters.cpp  linters.h  linters.hpp  main.cpp  source_checker.cpp  source_checker.hpp  source_linter.cpp  source_linter.h  source_linter.hpp
rulebook-cppcheck/: package.json  pyproject.toml
rulebook-cppcheck/rulebook_cppcheck/: __init__.py  check_set.py  checkset.py  messages.py  nodes.py
rulebook-cppcheck/tests/: asserts.py  test_messages.py  tests.py
rulebook-pylint/: .coverage  __init__.py  generics_naming_checker.py  messages.py  package.json  property_idiomatic_naming_checker.py  pyproject.toml  requirements.txt  rulebook_pylint.json  setup.py  source_acronym_capitalization_checker.py  source_word_meaning_checker.py
rulebook-pylint/rulebook_pylint/: __init__.py  abstract_class_definition.py  block_comment_line_joining_checker.py  block_comment_line_trimming_checker.py  block_comment_trim.py  built_in_function_position.py  builtin_function_position_checker.py  case_line_joining_checker.py  case_line_spacing_checker.py  case_separator.py  checkers.py  class_exception_extending_checker.py  class_final_name_blacklisting_checker.py  class_final_name_disallowing_checker.py  class_member_ordering_checker.py  class_name_abbreviation.py  class_name_acronym.py  class_name_acronym_capitalization_checker.py  class_name_blacklisting_checker.py  class_organization_checker.py  code_block_line_trimming_checker.py  code_block_trim.py  collections.py  comment_line_joining_checker.py  comment_line_trimming_checker.py  comment_trim.py  conditional_branch_joining_checker.py  conditional_branch_line_joining_checker.py  conditional_branch_line_wrapping_checker.py  constructor_position_checker.py  default_denesting_checker.py  default_flattening_checker.py  duplicate_blank_line.py  duplicate_blank_line_in_block_comment.py  duplicate_blank_line_in_comment.py  duplicate_space.py  empty_block_comment_line_joining_checker.py  empty_comment_line_joining_checker.py  empty_line_joining_checker.py  empty_line_wrapping_checker.py  (+61 more)
rulebook-pylint/tests/: asserts.py  test_abstract_class_definition.py  test_all.py  test_block_comment_line_joining_checker.py  test_block_comment_line_trimming_checker.py  test_block_comment_trim.py  test_built_in_function_position.py  test_builtin_function_position_checker.py  test_case_line_joining_checker.py  test_case_line_spacing_checker.py  test_case_separator.py  test_class_exception_extending_checker.py  test_class_final_name_blacklisting_checker.py  test_class_final_name_disallowing_checker.py  test_class_name_abbreviation.py  test_class_name_acronym.py  test_class_name_acronym_capitalization_checker.py  test_class_name_blacklisting_checker.py  test_class_organization_checker.py  test_code_block_line_trimming_checker.py  test_code_block_trim.py  test_collections.py  test_comment_line_joining_checker.py  test_comment_line_trimming_checker.py  test_comment_trim.py  test_conditional_branch_joining_checker.py  test_conditional_branch_line_joining_checker.py  test_conditional_branch_line_wrapping_checker.py  test_constructor_position_checker.py  test_default_denesting_checker.py  test_default_flattening_checker.py  test_duplicate_blank_line.py  test_duplicate_blank_line_in_block_comment.py  test_duplicate_blank_line_in_comment.py  test_duplicate_space.py  test_empty_block_comment_line_joining_checker.py  test_empty_comment_line_joining_checker.py  test_empty_line_joining_checker.py  test_empty_line_wrapping_checker.py  test_empty_parentheses_join.py  (+62 more)
sample/: .editorconfig  CMakeLists.txt  build.gradle.kts  package-lock.json  package.json  tsconfig.json
sample-configured/: .editorconfig  CMakeLists.txt  build.gradle.kts  custom_addon.json  custom_checks.xml  custom_pylintrc  custom_rules.xml  eslint.config.js  package.json  pylintrc  sample_checks.xml  sample_rules.xml  tsconfig.json
sample-configured/c/: block_tag_punctuation.c  file_size.c  illegal_variable_name.c  indent_style.c  line_length.c  meaningless_word.c
sample-configured/cpp/: member_order.cpp  required_generics_name.cpp
sample-configured/javascript/: meaningless-word.js  placeholder.js
sample-configured/python/: file_size.py  file_size_limitation.py  generics_common_naming.py  generics_naming.py  illegal_class_final_name.py  meaningless_word.py  member_order.py  property_idiomatic_naming.py  pylintrc  required_generics_name.py  source_word_meaning.py
sample-configured/typescript/: placeholder.ts
sample/c/: abbreviation_as_word.c  assignment_wrap.c  block_comment_space.c  (+42 more)
stress-test/: build.gradle.kts  package.json  pyproject.toml
stress-test-py/: pyproject.toml
(+7052 files in other folders)
