[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rulebook-cppcheck"
version = "0.3"
license = { text = "Apache-2.0" }
description = "Aggressive source code linter extensions"
readme = "../README.md"
authors = [{ name = "Hendra Anggrian", email = "hanggrian@proton.me" }]
keywords = ["lint rules", "lint checkers"]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "cppcheck==1.5.1",
  "regex",
]

[project.urls]
"Source Code" = "https://github.com/hanggrian/rulebook"
"Bug Tracker" = "https://github.com/hanggrian/rulebook/issues"

[tool.hatch.build.targets.wheel]
packages = ["rulebook_cppcheck"]

[tool.hatch.build.targets.sdist]
include = ["rulebook_cppcheck/resources"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
omit = ["tests/*"]
