[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rulebook-pylint"
version = "0.3"
license = { text = "Apache-2.0" }
description = "Aggressive source code linter extensions"
readme = "../README.md"
authors = [{ name = "Hendra Anggrian", email = "hanggrian@proton.me" }]
keywords = ["lint rules", "lint checkers"]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  # main
  "pylint==4.0.5",
  "astroid==4.0.4",
  "regex",
]

[project.urls]
"Source Code" = "https://github.com/hanggrian/rulebook"
"Bug Tracker" = "https://github.com/hanggrian/rulebook/issues"

[tool.hatch.build.targets.wheel]
packages = ["rulebook_pylint"]

[tool.hatch.build.targets.sdist]
include = ["rulebook_pylint/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
omit = ["tests/*"]
